# Termux-Ultra

./: .gitattributes  .gitignore  CHATGENT_INTEGRATION.md  CI-CD-README.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  TESTING.md  TROUBLESHOOTING.md  android-setup.sh  build-multi-lang.sh  build-verify.sh  build.gradle.kts  dev-setup.sh  patch.sh  settings.gradle.kts  test_project.sh
.baseline/: manifest.txt
.github/: security-config.yml
.github/workflows/: android-ci.yml  ci-cd.yml  ci.yml  nightly.yml  security.yml
agents/go/: agent.go
agents/java/: Agent.java
agents/python/: agent.py
agents/wasm/: agent.wat
api/: ApiService.kt
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/termuxultra/: InstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bifrost_jni.cpp  exports.map  llama_jni.cpp  mlc4j.cpp
app/src/main/java/com/example/termuxultra/: MainActivity.kt
app/src/main/java/com/example/termuxultra/agent/: AdvancedCommandExecutor.kt  AdvancedCommandParser.kt  ChatAgent.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/example/termuxultra/: EngineTest.kt  IntegrationTest.kt  TerminalCoreTest.kt  UnitTest.kt
boot/: BootReceiver.kt
engines/llama_jni/: LlamaEngine.kt
engines/mlc4j/: MLCEngine.kt
rust-core/: Cargo.toml  build-android.sh
rust-core/.cargo/: config.toml
rust-core/src/: lib.rs
terminal/: TerminalCore.kt
