[package]
name = "termux_ultra_bifrost"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
wasmtime = "18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
default = []
python = ["pyo3"]
